--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="publish.css?20240902" />
-    <title>91视频|91PORN|最新地址|最新可用地址</title>
+    <title>小蓝视频网|搜同网|最新地址|最新可用地址</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="keywords" content="91PORN,91视频,国产自拍,自拍视频,成人视频,成人图片,成人自拍,最新地址" />
-    <meta name="description" content="欢迎访问91视频|91PORN地址发布页，为您提供91视频最新地址。" />
+    <meta name="keywords" content="小蓝视频网,搜同网,男同网,Gay,男男性爱,伪娘TS,男同自拍,最新地址" />
+    <meta name="description" content="欢迎访问小蓝视频网|小蓝视频网地址发布页，为您提供小蓝视频网最新地址。" />
     <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 
